--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react": "~18.2.45",
+    "date-fns": "^3.3.1",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-reanimated": "^3.7.1",
+    "react-native-svg": "^15.0.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
